changes done to fix extended calc issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -7,14 +7,22 @@
     border: 1px solid #717377;
     border-radius: 16px;
     width: auto;
-    padding: 5px;
+    padding: 10px;
+
+
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(5, 0fr);
+    grid-template-rows: repeat(5, 1fr);
 }
 
 .mybtn {
     width: 60px;
     height: 60px;
-    margin: 3px !important;
-    box-shadow: 0px 0px 5px rgba(21, 53, 72, 0.9);
+    margin: 10px !important;
+    box-shadow: -2px -1px 11px rgba(21, 53, 72, 0.9);
     border-radius: 50% !important;
     color: white;
 }
@@ -27,7 +35,7 @@
     background-color: orange;
 }
 
-/* @media screen and (max-width: 419px) {
+@media screen and (max-width: 419px) {
     .calc {
         padding: 5px;
     }
@@ -36,4 +44,4 @@
         margin: 3px !important;
         box-shadow: 0px 0px 5px rgba(21, 53, 72, 0.9);
     }
-} */
+}
